# final-design

./: .env  .gitignore  AGNET_RAG.py  TEST.txt  calculate.py  doctor.py  graph_rag.py  main.py  mydeepseek.py
agent/: graph.py  nodes.py  state.py  tools.py
doc/: 2022212144田艺彬北京邮电大学本科毕业设计（论文）中期进展情况检查表.docx  北京邮电大学2026届本科毕业设计（论文）撰写指导手册-计算机.docx
doc/thesis/: .gitignore  README.md  build_thesis.py  main.typ  numeric-inline.csl  reference.bib  requirements.txt  template.typ
hachi_mvp/: .gitignore  docker-compose.yml
hachi_mvp/backend/: .env.example  .gitignore  Dockerfile  Lumina-Note.code-workspace  README.md  pyproject.toml
hachi_mvp/backend/app/: __init__.py  config.py  db.py  llm_client.py  main.py  profile_workspace.py  schemas.py  text_utils.py  tools.py  vector_store.py
hachi_mvp/backend/app/graphs/: __init__.py  answer_graph.py  router_agent.py
hachi_mvp/backend/app/services/: __init__.py  ask_service.py  knowledge_service.py  personalization_service.py  reminder_service.py  skill_service.py
hachi_mvp/backend/tests/: test_api_ask.py  test_keyword_fallback.py  test_memory_store.py  test_profile_workspace.py  test_router_logic.py
hachi_mvp/backend/workspace/: MEMORY.md  SOUL.md
hachi_mvp/extensions/chrome-web-clipper-mvp/: README.md  README_HACHI.md  background.js  content-script.js  manifest.json  options.html  options.js  popup.html  popup.js  styles.css
hachi_mvp/frontend/: image-inbox.html  index.html  skill-result.html
hachi_mvp/scripts/: milvus_remote.sh  run_backend.sh  setup_env.sh  validate_chrome_extension.sh
(+10 files in other folders)
