[project]
name = "hachi-mvp-backend"
version = "0.1.0"
description = "Hachi Assistant MVP backend with Milvus + LangGraph"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.32.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "httpx>=0.27.2",
  "dashscope>=1.23.0",
  "langgraph>=0.2.58",
  "langchain-core>=0.3.18",
  "pymilvus[milvus_lite]>=2.4.8",
  "pypdf>=5.1.0",
  "trafilatura>=1.12.2",
  "python-multipart>=0.0.17",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
